# learn_gk_bck

./: README.md  alembic.ini  app.py  pyproject.toml
alembic/versions/: 556651e1ea39_create_user_table.py
src/: dependencies.py  firebase.py  main.py
src/db/: database.py
src/enums/: __init__.py  enums.py
src/middlewares/: logging.py
src/models/: __init__.py  book.py  choice.py  preview_subunit.py  question.py  reported_question.py  subscription.py  subscription_type.py  subunit.py  unit.py  user.py  user_progress.py
src/routes/: book.py  quiz.py  subscription.py  user.py
src/schemas/: __init__.py  book.py  choice.py  error_responses.py  question.py  requests.py  responses.py  user_progress.py
src/services/: __init__.py  book.py  quiz.py  subscription.py  user.py  user_progress.py
